--- a/lidy-go/testdata/scalarType/scalar.spec.yaml
+++ b/lidy-go/testdata/scalarType/scalar.spec.yaml
@@ -1,50 +1,65 @@
-scalar:
-  exampleObject:
-    boolean:
-    - 'true'
-    - 'false'
-    float:
-    - '1.2'
-    - '-1.2'
-    - '0.2'
-    - '.2'
-    - '0.'
-    - '.0'
-    - '1_230.15'
-    - '12.3015e+02'
-    - '.inf'
-    - '-.Inf'
-    - '.nan'
-    - '.NaN'
-    - '.NAN'
-    - '2'
-    - '-2'
-    - '1234'
-    - '0x4D2'
-    - '02333'
-    int:
-    - '2'
-    - '-2'
-    - '1234'
-    - '0x4D2'
-    - '02333'
-    'null':
-    - 'null'
-    - '~'
-    - ''
-    string:
-    - a
-    - '`!@#$%^&*()-=~1234567890_+;'
-    - '"[]:{}'',./<>? \\ \" \t \n"'
-    timestamp:
-    - '2020-06-17T10:13:46'
-  extraExampleObject:
-    list:
-    - '[]'
-    - '[a]'
-    map:
-    - '{}'
-    - '{ k: v }'
-  rejectExtraExample: {}
-  rejectOtherExample: {}
-  selfAcceptExample: {}
+box: base
+input: { outcome: accept }
+content:
+  - name: boolean
+    input:
+      expression: 'boolean'
+    matrix:
+      text:
+        - 'true'
+        - 'false'
+  - name: float
+    input:
+      expression: 'float'
+    matrix:
+      text:
+        - '1.2'
+        - '-1.2'
+        - '0.2'
+        - '.2'
+        - '0.'
+        - '.0'
+        - '1_230.15'
+        - '12.3015e+02'
+        - '.inf'
+        - '-.Inf'
+        - '.nan'
+        - '.NaN'
+        - '.NAN'
+        - '2'
+        - '-2'
+        - '1234'
+        - '0x4D2'
+        - '02333'
+  - name: int
+    input:
+      expression: 'int'
+    matrix:
+      text:
+        - '2'
+        - '-2'
+        - '1234'
+        - '0x4D2'
+        - '02333'
+  - name: nullType
+    input:
+      expression: 'nullType'
+    matrix:
+      text:
+        - 'null'
+        - '~'
+        - ''
+  - name: string
+    input:
+      expression: 'string'
+    matrix:
+      text:
+        - a
+        - '`!@#$%^&*()-=~1234567890_+;'
+        - '"[]:{}'',./<>? \\ \" \t \n"'
+  - name: timestamp
+    input:
+      expression: 'timestamp'
+    matrix:
+      text:
+        - '2020-06-17T10:13:46'
