--- a/lidy-go/testdata/collection/mapOf.spec.yaml
+++ b/lidy-go/testdata/collection/mapOf.spec.yaml
@@ -1,33 +1,47 @@
-_mapOf basic:
-  expression: '_mapOf: { string: int }'
-  accept dict with one matching-matching entry:
-    '{ va: 0 }': {}
-  accept dict with several matching-matching entries:
-    '{ va: 0, vb: 1, vc: 2 }': {}
-  accept the empty dict:
-    '{}': {}
-  reject dict with non-matching keys:
-    '{ 0.1: 9 }': {}
-    '{ 2: 9 }': {}
-    '{ []: 9 }': {}
-    '{ true: 9 }': {}
-    '{ {}: 9 }': {}
-  reject dict with non-matching values:
-    '{ va: 0.1 }': {}
-    '{ va: 2020-06-17T10:13:46 }': {}
-    '{ va: [] }': {}
-    '{ va: true }': {}
-    '{ va: vz }': {}
-    '{ va: {} }': {}
-  reject non-dict:
-    '0': {}
-    '[]': {}
-    a: {}
-    'true': {}
-_mapOf more:
-  expression: '_mapOf: { string: string }'
-  accept string-string:
-    '{ 0k: 0v }': {}
-    '{ ka: va }': {}
-    '{ ka: va, kb: vb }': {}
-    '{ ka: va, kb: vb, 0k: 0v }': {}
+box: base
+content:
+  - name: _mapOf basic
+    expression: '_mapOf: { string: int }'
+    content:
+      - input: { outcome: 'accept' }
+        content:
+          - name: accept dict with one matching-matching entry
+            input: { text: '{ va: 0 }' }
+          - name: accept dict with several matching-matching entries
+            input: { text: '{ va: 0, vb: 1, vc: 2 }' }
+          - name: accept the empty dict
+            input: { text: '{}' }
+      - input: { outcome: 'reject' }
+        content:
+          - name: reject dict with non-matching keys
+            content:
+              - input: { text: '{ 0.1: 9 }' }
+              - input: { text: '{ 2: 9 }' }
+              - input: { text: '{ []: 9 }' }
+              - input: { text: '{ true: 9 }' }
+              - input: { text: '{ {}: 9 }' }
+          - name: reject dict with non-matching values
+            content:
+              - input: { text: '{ va: 0.1 }' }
+              - input: { text: '{ va: 2020-06-17T10:13:46 }' }
+              - input: { text: '{ va: [] }' }
+              - input: { text: '{ va: true }' }
+              - input: { text: '{ va: vz }' }
+              - input: { text: '{ va }' }
+          - name: reject non-dict
+            content:
+              - input: { text: '0' }
+              - input: { text: '[]' }
+              - input: { text: 'a' }
+              - input: { text: 'true' }
+  - name: _mapOf more
+    input:
+      expression: '_mapOf: { string: string }'
+    content:
+      - name: accept string-string mappings
+        input: { outcome: 'accept' }
+        content:
+          - input: { text: '{ 0k: 0v }' }
+          - input: { text: '{ ka: va }' }
+          - input: { text: '{ ka: va, kb: vb }' }
+          - input: { text: '{ ka: va, kb: vb, 0k: 0v }' }
