--- a/lidy-go/testdata/collection/min_max_nb.spec.yaml
+++ b/lidy-go/testdata/collection/min_max_nb.spec.yaml
@@ -1,30 +1,36 @@
-PENDING _min_max_nb for _listOf, accept:
-  expressionTemplate: |-
-    _listOf: any
-    ${checker}
-  checkerList:
-  - '_min: 2'
-  - '_max: 2'
-  - '_nb: 2'
-  accept when there's the right number:
-    '[a b]': {}
-PENDING _min_max_nb for _mapOf, accept:
-  expressionTemplate: |-
-    _mapOf: any
-    ${checker}
-  checkerList:
-  - '_min: 2'
-  - '_max: 2'
-  - '_nb: 2'
-  accept when there's the right number:
-    '{ ka: va, kb: vb }': {}
-PENDING _min_max_nb for _mapOf, reject:
-  expressionTemplate: |-
-    _mapOf: any
-    ${checker}
-  checkerList:
-  - '_min: 3'
-  - '_max: 1'
-  - '_nb: 3'
-  reject when the number requirement isn't met:
-    '{ ka: va, kb: vb }': {}
+box: base
+flag: PENDING
+content:
+  - name: _min_max_nb for _listOf
+    input:
+      expressionTemplate: |-
+        _listOf: any
+        ${checker}
+      checkerList:
+        - '_min: 2'
+        - '_max: 2'
+        - '_nb: 2'
+    content:
+      - name: accept when there's the right number of entries
+        input: { outcome: 'accept', text: '[a b]' }
+  - name: _min_max_nb for _mapOf
+    input:
+      expressionTemplate: |-
+        _mapOf: any
+        ${checker}
+      text: '{ ka: va, kb: vb }'
+    content:
+      - name: accept when there's the right number of entries
+        input:
+          checkerList:
+            - '_min: 2'
+            - '_max: 2'
+            - '_nb: 2'
+          outcome: accept
+      - name: reject when the number requirement is wrong
+        input:
+          checkerList:
+            - '_min: 3'
+            - '_max: 1'
+            - '_nb: 3'
+          outcome: reject
