--- a/lidy-go/testdata/collection/tuple.spec.yaml
+++ b/lidy-go/testdata/collection/tuple.spec.yaml
@@ -1,25 +1,37 @@
-_list with 0 entry:
-  expression: '_list: []'
-  accept the empty list:
-    '[]': {}
-  reject any non-empty list:
-    '[4]': {}
-    '[va]': {}
-  reject nodes that are not lists:
-    '{}': {}
-_list with 2 entries:
-  expression: '_list: [string, int]'
-  accept when all entries are present and valid:
-    '[va, 4]': {}
-  reject if an entry does not match:
-    '[12, 4]': {}
-    '[va, vb]': {}
-  reject lists with insufficiently many elements:
-    '[va, 4, extra]': {}
-  reject lists with too many elements:
-    '[va, 4, extra]': {}
-  reject nodes that are not a list:
-    '0': {}
-    a: {}
-    'true': {}
-    '{}': {}
+box: base
+content:
+  - name: _list with zero entry
+    input:
+      expression: '_list: []'
+    content:
+      - name: accept the empty list
+        input: { text: '[]' }
+          
+      - name: reject any non-empty list
+        content:
+          - input: { text: '[4]' }
+          - input: { text: '[va]' }
+      - name: reject nodes that are not lists
+        input: { text: '{}' }
+  - name: _list with two entries
+    input:
+      expression: '_list: [string, int]'
+    content:
+      - name: accept when all entries are present and valid
+        input: { outcome: 'accept', text: '[va, 4]' }
+      - input: { outcome: 'reject' }
+        content:
+          - name: reject if an entry does not match
+            content:
+              - input: { text: '[12, 4]' }
+              - input: { text: '[va, vb]' }
+          - name: reject lists with too few elements
+            input: { text: '[va, 4, extra]' }
+          - name: reject lists with too many elements
+            input: { text: '[va, 4, extra]' }
+          - name: reject nodes that are not lists
+            content:
+              - input: { text: '0' }
+              - input: { text: 'a' }
+              - input: { text: 'true' }
+              - input: { text: '{}' }
