--- a/lidy-go/testdata/scalar/regexp.spec.yaml
+++ b/lidy-go/testdata/scalar/regexp.spec.yaml
@@ -1,35 +1,51 @@
-_regex email:
-  expression: '_regex: "^[a-zA-Z0-9]+([.][a-zA-Z0-9]+)*@[a-zA-Z0-9]+([.][a-zA-Z0-9]+)+$"'
-  accept email:
-    'a.b.c@0.23.z': {}
-    'a@b.c': {}
-  reject non-email:
-    '.a@b.c': {}
-    'a@b': {}
-_regex empty:
-  expression: '_regex: "^$"'
-  accept empty string:
-    '''''': {}
-  reject letter:
-    a: {}
-  reject space:
-    ''' ''': {}
-_regex non-empty word:
-  expression: '_regex: "[a-z]+"'
-  accept non-empty word:
-    a: {}
-    word: {}
-  reject if not a string:
-    '1': {}
-    '1.1': {}
-    '[]': {}
-    'null': {}
-    'true': {}
-    '{}': {}
-  reject if not a string -- void:
-    ? ''
-    : {}
-  reject if not a string null:
-    'null': {}
-  reject the empty string:
-    '''''': {}
+box: base
+content:
+  - name: _regex email
+    input:
+      expression: '_regex: "^[a-zA-Z0-9]+([.][a-zA-Z0-9]+)*@[a-zA-Z0-9]+([.][a-zA-Z0-9]+)+$"'
+    content:
+      - name: accept email
+        input: { outcome: 'accept' }
+        content:
+          - input: { text: 'a.b.c@0.23.z' }
+          - input: { text: 'a@b.c' }
+      - name: reject non-email
+        input: { outcome: 'reject' }
+        content:
+          - input: { text: '.a@b.c' }
+          - input: { text: 'a@b' }
+  - name: _regex empty
+    input:
+      expression: '_regex: "^$"'
+    content:
+      - name: accept the empty string
+        input: { outcome: 'accept', text: '""' }
+      - name: reject letters
+        input: { outcome: 'reject', text: 'a' }
+      - name: reject strings containing a single space
+        input: { outcome: 'reject', text: ' ' }
+  - name: _regex non-empty word
+    input:
+      expression: '_regex: "[a-z]+"'
+    content:
+      - name: accept non-empty word
+        input: { outcome: 'accept' }
+        content:
+          - input: { text: 'a' }
+          - input: { text: 'word' }
+      - input: { outcome: 'reject' }
+        content:
+          - name: reject if not a string
+            content:
+              - input: { text: '1' }
+              - input: { text: '1.1' }
+              - input: { text: '[]' }
+              - input: { text: 'null' }
+              - input: { text: 'true' }
+              - input: { text: '{}' }
+          - name: reject if void, as it is not a string
+            input: { text: ~ }
+          - name: reject if null, as it is not a string
+            input: { text: 'null' }
+          - name: reject the empty string
+            input: { text: '""' }
