--- a/lidy-go/testdata/yaml/yaml.spec.yaml
+++ b/lidy-go/testdata/yaml/yaml.spec.yaml
@@ -1,22 +1,33 @@
-validate that the yaml is valid:
-  expression: any
-  'accept ... this? (what is this!?)':
-    '?': {}
-    '??': {}
-    '???': {}
-    '??_': {}
-  accept maps with empty values:
-    'a:': {}
-  accept strings, because it sees strings everywhere:
-    0 b 9: {}
-    a b: {}
-  reject misuse of tags:
-    '!!!aha!': {}
-    '!!!eh': {}
-    '!!oh': {}
-  reject the empty document:
-    ? ''
-    : {}
-  reject unknown tags:
-    '!!uh _': {}
-    '!ih _': {}
+box: base
+name: validate that the yaml is valid
+input:
+  expression: 'any'
+content:
+  - input: { outcome: 'accept' }
+    content:
+      - name: 'accept ... this? (what is this!?)'
+        matrix:
+          text:
+            - '?'
+            - '??'
+            - '???'
+            - '??_'
+      - name: accept maps with empty values
+        input: { text: 'a:' }
+      - name: accept strings, because it sees strings everywhere
+        content:
+          - input: { text: '0 b 9' }
+          - input: { text: 'a b' }
+  - input: { outcome: 'reject' }
+    content:
+      - name: reject misuse of tags
+        content:
+          - input: { text: '!!!aha!' }
+          - input: { text: '!!!eh' }
+          - input: { text: '!!oh' }
+      - name: reject the empty document
+        input: { text: '' }
+      - name: reject unknown tags
+        content:
+          - input: { text: '!!uh _' }
+          - input: { text: '!ih _' }
